01_ec2_autoscaling/security-groups.tf
resource "aws_security_group" "allow_ssh_ip" {
  name        = "allow_ssh_ip"
  description = "Allow inbound SSH traffic from my IP"
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name        = "Allow SSH"
  }
}

resource "aws_security_group" "http_server_public" {
  name        = "http server public"
  description = "Allow HTTP traffic"
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name        = "Allow HTTP traffic"
  }
}
